--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,6 +25,10 @@ jobs:
 
       - name: Check formatting
         run: black --check buildserver/
+      
+      - name: Create env file
+        run: |
+          echo "${{ secrets.DEV_ENV_FILE }}" > .env
 
       - name: Run tests
         run: pytest -v buildserver/tests/
