--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,14 +18,14 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install -r buildserver/requirements.txt pylint black
+        run: pip install -r buildserver/requirements.txt pylint pre-commit
+
+      - name: Check with pre-commit
+        run: pre-commit run --all-files
 
       - name: Lint
         run: pylint --fail-under=7 buildserver/
 
-      - name: Check formatting
-        run: black --check buildserver/
-      
       - name: Create env file
         run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
 
