install dependencies, update pythonpath, setup pre-commit

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,8 @@
             }
         }
     },
-    "postCreateCommand": "pip install -r ./buildserver/requirements.txt"
+    "remoteEnv": {
+        "PYTHONPATH": "${containerWorkspaceFolder}:${containerEnv:PYTHONPATH}"
+    },
+    "postCreateCommand": "pip install -r ./buildserver/requirements.txt pylint pre-commit && pre-commit install"
 }
