--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,31 +6,55 @@ on:
     branches: [main]
 
 jobs:
-  test:
+
+  check-with-pre-commit:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+            python-version: "3.12"
+      - name: Install dependencies
+        run: pip install pre-commit
+      - name: Check with pre-commit
+        run: pre-commit run --all-files
+  lint:
+    runs-on: ubuntu-latest
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: pip install pylint
+      - name: lint
+        run: pylint --exit-zero buildserver/
+  #     -
+  unit-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
+      # - name: Install dependencies
+      #   run: pip install -r buildserver/requirements.txt pylint pre-commit
+
       - name: Install dependencies
-        run: pip install -r buildserver/requirements.txt pylint pre-commit
+        run: pip install --no-build-isolation -e .
 
-      - name: Check with pre-commit
-        run: pre-commit run --all-files
-
-      - name: Lint
-        run: pylint --fail-under=7 buildserver/
+      # - name: Lint
+      #   run: pylint --fail-under=7 buildserver/
 
       - name: Create env file
         run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
 
-      - name: Add project to path
-        run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
+      # - name: Add project to path
+      #   run: echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
 
       - name: Run unit tests
         run: pytest -v buildserver/tests/unit
