--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,9 @@ jobs:
       #   run: pip install -r buildserver/requirements.txt pylint pre-commit
 
       - name: Install dependencies
-        run: pip install --no-build-isolation -e .
+        run: |
+          pip install --upgrade setuptools pip; \
+          pip install --no-build-isolation -e .
 
       # - name: Lint
       #   run: pylint --fail-under=7 buildserver/
