only look for packages within buildserver directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ buildserver = "buildserver.main:app"
 [tool.setuptools.dynamic]
 version = {file = "version.txt"}
 
+[tool.setuptools.packages.find]
+where = ["buildserver"]
+
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
