--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,6 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade setuptools pip; \
+          pip install pytest; \
           pip install --no-build-isolation -e .
 
       # - name: Lint
