--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ description = "CI/CD System"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "starlette",
+    "fastapi[standard]",
+    "sqlalchemy",
+    "psycopg2-binary",
 ]
 
 [project.urls]
