--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
             "extensions": [
                 "ms-python.python",
                 "ms-python.vscode-pylance",
-                "ms-python.pylint"
+                "ms-python.pylint",
+                "redhat.vscode-yaml"
             ],
             "settings": {
                 "python.pythonPath": "/usr/local/bin/python"
