--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
                 "ms-python.python",
                 "ms-python.vscode-pylance",
                 "ms-python.pylint",
-                "redhat.vscode-yaml"
+                "redhat.vscode-yaml",
+                "docker.docker"
             ],
             "settings": {
                 "python.pythonPath": "/usr/local/bin/python"
