--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
 
   unit-test:
     runs-on: ubuntu-latest
-
+    needs: [lint, check-with-pre-commit]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -50,3 +50,24 @@ jobs:
 
       - name: Run unit tests
         run: pytest -v buildserver/tests/unit
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: [lint, check-with-pre-commit]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - uses: docker/setup-docker-action@v4
+      - name: Setup external services
+        run: docker run --rm -d -p 5432:5432 -e POSTGRES_PASSWORD=example postgres
+      - name: Create env file
+        run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
+      - name: Install dependencies
+        run: |
+          pip install --upgrade setuptools pip; \
+          pip install pytest; \
+          pip install -e .[test]
+      - name: Run e2e tests
+        run: pytest -v buildserver/tests/e2e
