hack to get things going

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -69,5 +69,6 @@ jobs:
           pip install --upgrade setuptools pip; \
           pip install pytest; \
           pip install -e .[test]
+      - run: mkdir ./build # hack until build dir becomes ephemeral
       - name: Run e2e tests
         run: pytest -v buildserver/tests/e2e
