--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,6 @@ on:
     branches: [main]
 
 jobs:
-
   check-with-pre-commit:
     runs-on: ubuntu-latest
 
@@ -14,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-            python-version: "3.12"
+          python-version: "3.12"
       - name: Install dependencies
         run: pip install pre-commit
       - name: Check with pre-commit
@@ -62,6 +61,10 @@ jobs:
       - uses: docker/setup-docker-action@v4
       - name: Setup external services
         run: docker run --rm -d -p 5432:5432 -e POSTGRES_PASSWORD=example postgres
+      - name: configure git
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
       - name: Create env file
         run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
       - name: Install dependencies
