install editable version of package instead of requirements NOTE: should probably add pylint and pre-commit to a dev dependencies block

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,5 +19,5 @@
     "remoteEnv": {
         "PYTHONPATH": "${containerWorkspaceFolder}:${containerEnv:PYTHONPATH}"
     },
-    "postCreateCommand": "pip install -r ./buildserver/requirements.txt pylint pre-commit && pre-commit install"
+    "postCreateCommand": "pip install -e .[test] && pip install pylint pre-commit && pre-commit install"
 }
