--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,6 @@ on:
     branches: [main]
 
 jobs:
-
   check-with-pre-commit:
     runs-on: ubuntu-latest
 
@@ -14,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-            python-version: "3.12"
+          python-version: "3.12"
       - name: Install dependencies
         run: pip install pre-commit
       - name: Check with pre-commit
@@ -50,6 +49,26 @@ jobs:
 
       - name: Run unit tests
         run: pytest -v buildserver/tests/unit
+
+  integration-test:
+    runs-on: ubuntu-latest
+    needs: [lint, check-with-pre-commit]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Setup external services
+        run: docker run --rm -d -p 5672:5672 rabbitmq
+      - name: Create env file
+        run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
+      - name: Install dependencies
+        run: |
+          pip install --upgrade setuptools pip; \
+          pip install pytest; \
+          pip install -e .[test]
+      - name: Run integration tests
+        run: pytest -v buildserver/tests/integration
 
   e2e-test:
     runs-on: ubuntu-latest
