--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,7 +46,8 @@ jobs:
           pip install --upgrade setuptools pip; \
           pip install pytest; \
           pip install -e .[test]
-
+      - name: Create env file
+        run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
       - name: Run unit tests
         run: pytest -v buildserver/tests/unit
 
