--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -60,7 +60,9 @@ jobs:
         with:
           python-version: "3.12"
       - name: Setup external services
-        run: docker run --rm -d -p 5672:5672 rabbitmq
+        run: |
+          docker run --rm -d -p 5432:5432 -e POSTGRES_PASSWORD=example postgres; \
+          docker run --rm -d -p 5672:5672 rabbitmq
       - name: Create env file
         run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
       - name: Install dependencies
@@ -83,7 +85,7 @@ jobs:
       - name: Setup external services
         run: |
           docker run --rm -d -p 5432:5432 -e POSTGRES_PASSWORD=example postgres; \
-          # docker run --rm -d -p 5672:5672 rabbitmq
+          docker run --rm -d -p 5672:5672 rabbitmq
       - name: Create env file
         run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
       - name: Install dependencies
