switched to mkdocs

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,8 +5,8 @@ build:
   tools:
     python: "3.12"
 
-sphinx:
-  configuration: docs/conf.py
+mkdocs:
+  configuration: mkdocs.yml
 
 python:
   install:
