--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ test = [
     "asgi-lifespan",
 ]
 docs = [
-    "sphinx",
-    "furo",
+    "mkdocs",
+    "mkdocs-material",
 ]
 
 [project.urls]
