--- a/.github/workflows/buildserver.yaml
+++ b/.github/workflows/buildserver.yaml
@@ -47,7 +47,7 @@ jobs:
           docker run --rm -d -p 5432:5432 -e POSTGRES_PASSWORD=example postgres; \
           docker run --rm -d -p 5672:5672 rabbitmq
       - name: Create env file
-        run: echo "${{ secrets.DEV_ENV_FILE }}" > .env
+        run: echo "${{ secrets.DEV_ENV_FILE }}" > buildserver-api/.env
       - name: Install dependencies
         working-directory: buildserver
         run: |
