--- a/.github/workflows/buildserver.yaml
+++ b/.github/workflows/buildserver.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Create env file
         run: echo "${{ secrets.DEV_ENV_FILE }}" > buildserver-api/.env
       - name: Install dependencies
-        working-directory: buildserver
+        working-directory: buildserver-api
         run: |
           pip install --upgrade setuptools pip; \
           pip install pytest; \
