--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,11 @@
     "dockerComposeFile": "docker-compose.yml",
     "service": "dev",
     "workspaceFolder": "/workspace",
+    "features": {
+        "ghcr.io/devcontainers/features/docker-in-docker:2": { "moby": false},
+        "ghcr.io/devcontainers/features/terraform:1": {},
+        "ghcr.io/devcontainers-extra/features/ansible": {}
+    },
     "customizations": {
         "vscode": {
             "extensions": [
@@ -9,7 +14,9 @@
                 "ms-python.vscode-pylance",
                 "ms-python.pylint",
                 "redhat.vscode-yaml",
-                "docker.docker"
+                "docker.docker",
+                "hashicorp.terraform",
+                "redhat.ansible"
             ],
             "settings": {
                 "python.pythonPath": "/usr/local/bin/python"
@@ -19,5 +26,5 @@
     "remoteEnv": {
         "PYTHONPATH": "${containerWorkspaceFolder}:${containerEnv:PYTHONPATH}"
     },
-    "postCreateCommand": "pip install -e .[test] && pip install pylint pre-commit && pre-commit install"
+    "postCreateCommand": "pip install -e ./buildserver-api[test] -e ./buildserver-runner[test] && pip install pylint pre-commit && pre-commit install"
 }
