--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,9 +8,6 @@ build:
 mkdocs:
   configuration: mkdocs.yml
 
-# python:
-#   install:
-#     - method: pip
-#       path: .
-#       extra_requirements:
-#         - docs
+python:
+  install:
+    - requirements: docs/requirements.txt
