--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,15 @@ repo_name: larryb02/Build-Server
 theme:
   name: material
 
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - admonition:
+  - pymdownx.details:
+
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
