--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
     "service": "dev",
     "workspaceFolder": "/workspace",
     "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": { "moby": false}
+        "ghcr.io/devcontainers/features/docker-in-docker:2": { "moby": false},
+        "ghcr.io/devcontainers/features/terraform": {}
     },
     "customizations": {
         "vscode": {
