--- a/.github/workflows/bastion.yaml
+++ b/.github/workflows/bastion.yaml
@@ -1,26 +1,48 @@
 name: Manage bastion host
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - development
+      - main
+    paths:
+      - "infra/terraform/aws/bastion/**"
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  CLUSTER_DIR: infra/terraform/aws/bastion
+  BASTION_DIR: infra/terraform/aws/bastion
 
 jobs:
-  create_bastion:
+  plan:
+    if: github.ref == 'refs/heads/development'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: hashicorp/setup-terraform@v3
-    - run: |
-        terraform -chdir=$CLUSTER_DIR init
-        terraform -chdir=$CLUSTER_DIR validate
-        terraform -chdir=$CLUSTER_DIR apply -auto-approve
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+      - run: |
+          terraform -chdir=$BASTION_DIR init
+          terraform -chdir=$BASTION_DIR validate
+          terraform -chdir=$BASTION_DIR plan -out=tfplan
+      - uses: actions/upload-artifact@v4
+        with:
+          name: bastion-tfplan
+          path: ${{ env.BASTION_DIR }}/tfplan
+
+  apply:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+      - uses: actions/download-artifact@v4
+        with:
+          name: bastion-tfplan
+          path: ${{ env.BASTION_DIR }}
+      - run: terraform -chdir=$BASTION_DIR apply tfplan
 
   bootstrap_bastion:
     runs-on: ubuntu-latest
-    needs: [create_bastion]
+    needs: [apply]
     steps:
       - run: echo 'running ansible playbook here'
