--- a/.github/workflows/bastion.yaml
+++ b/.github/workflows/bastion.yaml
@@ -7,10 +7,12 @@ on:
       - main
     paths:
       - "infra/terraform/aws/bastion/**"
+  workflow_dispatch:
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_REGION: us-west-1
   BASTION_DIR: infra/terraform/aws/bastion
 
 jobs:
