--- a/infra/ansible/bootstrap_cluster/roles/k3s_server/tasks/main.yml
+++ b/infra/ansible/bootstrap_cluster/roles/k3s_server/tasks/main.yml
@@ -1,28 +1,29 @@
 ---
-- name: Install k3s server
+- name: Download k3s install script
   ansible.builtin.get_url:
     url: https://get.k3s.io
-    dest: /tmp/---
+    dest: /tmp/k3s-install.sh
     mode: '0744'
 
-# - name: Install k3s server
-#   ansible.builtin.shell: >
-#     curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION={{ k3s_version }} sh -
-#   args:
-#     creates: /usr/local/bin/k3s
+- name: Install k3s server
+  ansible.builtin.command: /tmp/k3s-install.sh
+  args:
+    creates: /usr/local/bin/k3s
+  environment:
+    INSTALL_K3S_VERSION: "{{ k3s_version }}"
 
-# - name: Wait for k3s to be ready
-#   ansible.builtin.wait_for:
-#     path: /var/lib/rancher/k3s/server/node-token
-#     state: present
-#     timeout: 60
+- name: Wait for k3s to be ready
+  ansible.builtin.wait_for:
+    path: /var/lib/rancher/k3s/server/node-token
+    state: present
+    timeout: 60
 
-# - name: Read node token
-#   ansible.builtin.slurp:
-#     src: /var/lib/rancher/k3s/server/node-token
-#   register: k3s_token_raw
+- name: Read node token
+  ansible.builtin.slurp:
+    src: /var/lib/rancher/k3s/server/node-token
+  register: k3s_server_token_raw
 
-# - name: Set token fact
-#   set_fact:
-#     k3s_token: "{{ k3s_token_raw.content | b64decode | trim }}"
-#     k3s_server_ip: "{{ ansible_host }}"
+- name: Set token fact
+  ansible.builtin.set_fact:
+    k3s_server_token: "{{ k3s_server_token_raw.content | b64decode | trim }}"
+    k3s_server_ip: "{{ ansible_host }}"
