try instance id

--- a/infra/ansible/bootstrap_cluster/inventory/aws_ec2.yml
+++ b/infra/ansible/bootstrap_cluster/inventory/aws_ec2.yml
@@ -12,6 +12,7 @@ keyed_groups:
     prefix: k3s
     separator: _
 hostnames:
-  - private-ip-address
+  - instance-id
 compose:
-  ansible_host: private_ip_address
+  ansible_host: instance_id
+  ansible_aws_ssm_instance_id: instance_id
