--- a/infra/ansible/bootstrap_cluster/roles/k3s_server/tasks/main.yml
+++ b/infra/ansible/bootstrap_cluster/roles/k3s_server/tasks/main.yml
@@ -10,7 +10,7 @@
   args:
     creates: /usr/local/bin/k3s
   environment:
-    INSTALL_K3S_VERSION: "{{ k3s_version }}"
+    INSTALL_K3S_EXEC: "server"
 
 - name: Wait for k3s to be ready
   ansible.builtin.wait_for:
