--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,3 +42,18 @@ jobs:
           file: ${{ matrix.dockerfile }}
           push: true
           tags: ${{ env.IMAGE_PREFIX }}/${{ matrix.name }}:latest,${{ env.IMAGE_PREFIX }}/${{ matrix.name }}:${{ env.VERSION }}
+
+  tag:
+    runs-on: ubuntu-latest
+    needs: [build-and-push]
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create git tag
+        run: |
+          VERSION=$(cat buildserver-api/version.txt)
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git tag "v${VERSION}"
+          git push origin "v${VERSION}"
