--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,28 +2,18 @@
     "dockerComposeFile": "docker-compose.yml",
     "service": "dev",
     "workspaceFolder": "/workspace",
-    "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": { "moby": false},
-        "ghcr.io/devcontainers/features/terraform": {}
-    },
     "customizations": {
         "vscode": {
             "extensions": [
                 "ms-python.python",
                 "ms-python.vscode-pylance",
                 "ms-python.pylint",
-                "redhat.vscode-yaml",
-                "docker.docker",
-                "hashicorp.terraform",
-                "redhat.ansible"
+                "redhat.vscode-yaml"
             ],
             "settings": {
-                "python.pythonPath": "/usr/local/bin/python"
+                "python.defaultInterpreterPath": "${containerWorkspaceFolder}/.venv/bin/python"
             }
         }
-    },
-    "remoteEnv": {
-        "PYTHONPATH": "${containerWorkspaceFolder}:${containerEnv:PYTHONPATH}"
     },
     "postCreateCommand": "bash .devcontainer/post-create.sh"
 }
