--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -47,7 +47,7 @@ jobs:
         run: |
           docker run --rm -d -p 5672:5672 rabbitmq
       - name: Create env file
-        run: echo "${{ secrets.DEV_ENV_FILE }}" > buildserver-runner/.env
+        run: echo "${{ secrets.RUNNER_ENV_FILE }}" > buildserver-runner/.env
       - name: Install dependencies
         working-directory: buildserver-runner
         run: |
